@@ -1,3 +1,5 @@
+- fixed "-" in the username
+- proxy AUTH issue workaround (not able to make CURLAUTH_ANY work)
 28/05/2004 0.0.3 bomb! feature release
 - updated the doc
 - fixed libero webmail to new mlex and new libero webmail (nobody
